--- a/app/views/creditcards/index.html.erb
+++ b/app/views/creditcards/index.html.erb
@@ -1,6 +1,6 @@
-<% @title = t(".title") %>
+<% title t(".title") %>
 <div id="show_command">
-	<%= link_to t("creditcards.new.title"), new_creditcard_path %>
+  <%= link_to t("creditcards.new.title"), new_creditcard_path %>
 </div>
 <table id="list-table">
   <tr>
