--- a/app/views/payments/yearly.html.slim
+++ b/app/views/payments/yearly.html.slim
@@ -1,4 +1,4 @@
-- @title = t("payments.yearly.title")
+- title t("payments.yearly.title")
 
 #show_command
   = link_to t('common.title.back'), payment_path(user)
