--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,41 +1,41 @@
-<% @title = t(".title") %>
+<% title t(".title") %>
 <div id="show_command">
-	<%= link_to t("common.title.show"), @project %> |
-	<%= link_to t("common.title.back"), projects_path %> |
-	<%= link_to t(".completed"), {:action => "completed", :id => @project}, {:confirm => t(".confirm_complete")} %>	
+  <%= link_to t("common.title.show"), @project %> |
+  <%= link_to t("common.title.back"), projects_path %> |
+  <%= link_to t(".completed"), {:action => "completed", :id => @project}, {:confirm => t(".confirm_complete")} %>
 </div>
 <h2><%= t("common.title.edit") %></h2>
 
 <%= form_for(@project, :html => {:class => "tabular"}) do |f| %>
 <%= f.error_messages %>
-<div class="box">	
-	<p>
-		<%= f.label :name, Project.human_attribute_name("name") %>
-		<%= f.text_field :name %>
-	</p>
-	<p>
-		<%= f.label :started_on, Project.human_attribute_name("started_on") %>
-		<%= f.date_select :started_on, :order => [:year, :month, :day] %>
-	</p>
-	<p>
-		<%= f.label :ending_on, Project.human_attribute_name("ending_on") %>
-		<%= f.date_select :ending_on, :order => [:year, :month, :day] %>
-	</p>
-	<p>
-		<%= f.label :revenue, Project.human_attribute_name("revenue") %>
-		<%= f.text_field :revenue %>
-	</p>
+<div class="box">
+  <p>
+    <%= f.label :name, Project.human_attribute_name("name") %>
+    <%= f.text_field :name %>
+  </p>
+  <p>
+    <%= f.label :started_on, Project.human_attribute_name("started_on") %>
+    <%= f.date_select :started_on, :order => [:year, :month, :day] %>
+  </p>
+  <p>
+    <%= f.label :ending_on, Project.human_attribute_name("ending_on") %>
+    <%= f.date_select :ending_on, :order => [:year, :month, :day] %>
+  </p>
+  <p>
+    <%= f.label :revenue, Project.human_attribute_name("revenue") %>
+    <%= f.text_field :revenue %>
+  </p>
 </div>
 <%= f.submit t('common.button.update') %>
 <% end %>
 <%= form_tag({:action => "add_user", :id => @project, }, {:class => "tabular"}) do %>
   <div class="box">
-  	<p>
-  		<%= label_tag :username, User.human_attribute_name("name") %>
+    <p>
+      <%= label_tag :username, User.human_attribute_name("name") %>
 <% for user in @project.users %>
 <%= user.name %> [<%= link_to t("common.title.destroy"), :action => "del_user", :id => @project, :uid => user.id %>]<br />
 <% end %>
-			<%= text_field_tag :username %><%= submit_tag t("common.button.add") %>
-  	</p>
+      <%= text_field_tag :username %><%= submit_tag t("common.button.add") %>
+    </p>
   </div>
 <% end -%>
