--- a/app/views/taxbills/show.html.erb
+++ b/app/views/taxbills/show.html.erb
@@ -1,4 +1,4 @@
-<% @title = t('.title') %>
+<% title t('.title') %>
 
 <div id="show_command">
   <%= link_to t('common.title.edit'), [:edit, taxbill] %> |
