--- a/app/views/attachments/edit.html.erb
+++ b/app/views/attachments/edit.html.erb
@@ -1,11 +1,11 @@
-<% @title = t(".title") %>
+<% title t(".title") %>
 <div id="show_command">
-	<%= link_to t('common.title.show'), @attachment %> |
-	<%= link_to t('common.title.list'), attachments_path %>
+  <%= link_to t('common.title.show'), @attachment %> |
+  <%= link_to t('common.title.list'), attachments_path %>
 </div>
 <h2><%= t("common.title.edit") %></h2>
 <%= form_for(@attachment,
-		:html => {:class => "tabular"}) do |f| %>
+    :html => {:class => "tabular"}) do |f| %>
   <%= f.error_messages %>
 <div class="box">
   <p>
