--- a/app/views/attachments/index.html.erb
+++ b/app/views/attachments/index.html.erb
@@ -1,7 +1,7 @@
-<% @title = t(".title") %>
+<% title t(".title") %>
 
 <div id="show_command">
-	<%= link_to t('.new'), new_attachment_path %>	
+  <%= link_to t('.new'), new_attachment_path %>
 </div>
 <h2><%= t("common.title.list") %></h2>
 <table id="list-table">
@@ -18,11 +18,11 @@
 <% @attachments.each do |attachment| %>
 <tr class="selectable" onclick="location.href='<%= attachment_path(attachment) %>'">
     <td><%=h attachment.id %></td>
-		<% if attachment.user then %>
-	    <td><%=h attachment.user.name %></td>
-		<% else %>
-			<td></td>
-		<% end %>
+    <% if attachment.user then %>
+      <td><%=h attachment.user.name %></td>
+    <% else %>
+      <td></td>
+    <% end %>
     <td><%=h attachment.title %></td>
     <td><%=h attachment.comments %></td>
     <td><%=h attachment.contenttype %></td>
