--- a/app/views/attachments/new.html.erb
+++ b/app/views/attachments/new.html.erb
@@ -1,11 +1,11 @@
-<% @title = t(".title") %>
+<% title t(".title") %>
 <div id="show_command">
-	<%= link_to t("common.title.back"), attachments_path %>	
+  <%= link_to t("common.title.back"), attachments_path %>
 </div>
 <h2><%= t("common.title.new") %></h2>
 <%= form_for(:attachment,
-	:url => {:action => 'save'},
-	:html => { :class => "tabular", :multipart => true } ) do |f| %>
+  :url => {:action => 'save'},
+  :html => { :class => "tabular", :multipart => true } ) do |f| %>
   <%= f.error_messages %>
 <div class="box">
   <p>
