--- a/app/views/cardbills/edit.html.erb
+++ b/app/views/cardbills/edit.html.erb
@@ -1,13 +1,13 @@
-<% @title = t('.title') %>
+<% title t('.title') %>
 <div id="show_command">
-	<%= link_to t('common.title.show'), @cardbill %> |
-	<%= link_to t('common.title.list'), cardbills_path %>
+  <%= link_to t('common.title.show'), @cardbill %> |
+  <%= link_to t('common.title.list'), cardbills_path %>
 </div>
 <h2><%= t("common.title.edit") %></h2>
 
 <%= form_for(@cardbill,
-		:url => { :action => 'update' },
-		:html => { :class => 'tabular', :multipart => true } ) do |f| %>
+    :url => { :action => 'update' },
+    :html => { :class => 'tabular', :multipart => true } ) do |f| %>
   <%= f.error_messages %>
 <div class="box">
   <p>
@@ -46,8 +46,8 @@
     <%= f.label :approveno, Cardbill.human_attribute_name('approveno') %>
     <%= f.text_field :approveno %>
   </p>
-	<p>
-	<%= render :partial => "shared/edit_attachment", :object => @cardbill %>
+  <p>
+  <%= render :partial => "shared/edit_attachment", :object => @cardbill %>
 
 </div>
 <%= f.submit t('common.button.update') %>
