--- a/app/views/creditcards/new.html.erb
+++ b/app/views/creditcards/new.html.erb
@@ -1,10 +1,10 @@
-<% @title = t(".title") %>
+<% title t(".title") %>
 <div id="show_command">
-	<%= link_to t("common.title.back"), creditcards_path %>
+  <%= link_to t("common.title.back"), creditcards_path %>
 </div>
 <h2><%= t("common.title.new") %></h2>
 <%= form_for(@creditcard,
-		:html => {:class => "tabular", :multipart => true}) do |f| %>
+    :html => {:class => "tabular", :multipart => true}) do |f| %>
   <%= f.error_messages %>
 <div class="box">
   <p>
@@ -31,7 +31,7 @@
     <%= f.label :cardholder, Creditcard.human_attribute_name('cardholder') %>
     <%= f.text_field :cardholder %>
   </p>
-	<%= render :partial => "shared/new_attachment" %>
+  <%= render :partial => "shared/new_attachment" %>
 </div>
 <%= f.submit t("common.button.create") %>
 <% end %>
