--- a/app/views/hrinfos/edit.html.erb
+++ b/app/views/hrinfos/edit.html.erb
@@ -1,11 +1,11 @@
-<% @title = t('.title') %>
+<% title t('.title') %>
 <div id="show_command">
 <%= link_to t('common.title.show'), @hrinfo %> |
 <%= link_to t('common.title.back'), hrinfos_path %>
 </div>
 <h2><%= t('common.title.edit') %></h2>
 <%= form_for(@hrinfo,
-		:html => {:class => "tabular", :multipart => true}) do |f| %>
+    :html => {:class => "tabular", :multipart => true}) do |f| %>
 <div class="box">
   <%= f.error_messages %>
 
@@ -22,35 +22,35 @@
     <%= f.label :firstname, Hrinfo.human_attribute_name('firstname') %>
     <%= f.text_field :firstname %>
   </p>
-	<p>
-		<%= f.label :position, Hrinfo.human_attribute_name('position') %>
+  <p>
+    <%= f.label :position, Hrinfo.human_attribute_name('position') %>
     <%= f.text_field :position %>
-	</p>
-	<p>
-		<%= f.label :joined_on, Hrinfo.human_attribute_name('joined_on') %>
+  </p>
+  <p>
+    <%= f.label :joined_on, Hrinfo.human_attribute_name('joined_on') %>
     <%= f.date_select :joined_on, :order => [:year, :month, :day] %>
-	</p>
+  </p>
 <% end %>
-	<p>
-		<%= f.label :juminno, Hrinfo.human_attribute_name('juminno') %>
+  <p>
+    <%= f.label :juminno, Hrinfo.human_attribute_name('juminno') %>
     <%= f.text_field :juminno %>
-	</p>
-	<p>
-		<%= f.label :email, Hrinfo.human_attribute_name('email') %>
+  </p>
+  <p>
+    <%= f.label :email, Hrinfo.human_attribute_name('email') %>
     <%= f.text_field :email %>
-	</p>
-	<p>
-		<%= f.label :address, Hrinfo.human_attribute_name('address') %>
+  </p>
+  <p>
+    <%= f.label :address, Hrinfo.human_attribute_name('address') %>
     <%= f.text_field :address, :size => 40 %>
-	</p>
-	<p>
-		<%= f.label :mphone, Hrinfo.human_attribute_name('mphone') %>
+  </p>
+  <p>
+    <%= f.label :mphone, Hrinfo.human_attribute_name('mphone') %>
     <%= f.text_field :mphone %>
-	</p>
+  </p>
 <% if @user.ingroup?("admin") %>
-	<p>
-		<%= render 'shared/attachments/form', label: t('hrinfos.edit.picture') %>
-	</p>
+  <p>
+    <%= render 'shared/attachments/form', label: t('hrinfos.edit.picture') %>
+  </p>
 <% end %>
 </div>
 <%= f.submit t("common.button.update") %>
