--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -1,5 +1,5 @@
 <% form_type = if payment.new_record? then 'new' else 'edit' end %>
-<% @title = t("payments.#{form_type}.title") %>
+<% title t("payments.#{form_type}.title") %>
 
 <div id="show_command">
   <%= link_to t('common.title.back'), payment_path(user) %>
