--- a/app/views/pettycashes/new.html.erb
+++ b/app/views/pettycashes/new.html.erb
@@ -1,10 +1,10 @@
-<% @title = t('.title') %>
+<% title t('.title') %>
 <div id="show_command">
-	<%= link_to t('common.title.back'), pettycashes_path %>
+  <%= link_to t('common.title.back'), pettycashes_path %>
 </div>
 <h2><%= t("common.title.new") %></h2>
 <%= form_for(@pettycash,
-		:html => { :multipart => true } ) do |f| %>
+    :html => { :multipart => true } ) do |f| %>
   <%= f.error_messages %>
 <div class="box">
   <p>
@@ -24,10 +24,10 @@
     <%= f.text_area :description %>
   </p>
 <%= fields_for :attachment, @attachment do |attachment| -%>
-	<p>
-		<%= attachment.label :uploaded_file, t("common.title.attachment") %>
-		<%= attachment.file_field :uploaded_file %>
-	</p>
+  <p>
+    <%= attachment.label :uploaded_file, t("common.title.attachment") %>
+    <%= attachment.file_field :uploaded_file %>
+  </p>
 <% end -%>
 </div>
   <p>
