--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,6 +1,6 @@
-<% @title = t('.title') %>
+<% title t('.title') %>
 <div id="show_command">
-	<%= link_to t('common.title.back'), projects_path %>	
+  <%= link_to t('common.title.back'), projects_path %>
 </div>
 <h2><%= t("common.title.new") %></h2>
 
@@ -11,20 +11,20 @@
 <div class="box">
 
 <p>
-	<%= f.label :name, Project.human_attribute_name("name") %>
-	<%= f.text_field :name %>
+  <%= f.label :name, Project.human_attribute_name("name") %>
+  <%= f.text_field :name %>
 </p>
 <p>
-	<%= f.label :started_on, Project.human_attribute_name("started_on") %>
-	<%= f.date_select :started_on, :order => [:year, :month, :day] %>
+  <%= f.label :started_on, Project.human_attribute_name("started_on") %>
+  <%= f.date_select :started_on, :order => [:year, :month, :day] %>
 </p>
 <p>
-	<%= f.label :ending_on, Project.human_attribute_name("ending_on") %>
-	<%= f.date_select :ending_on, :order => [:year, :month, :day] %>
+  <%= f.label :ending_on, Project.human_attribute_name("ending_on") %>
+  <%= f.date_select :ending_on, :order => [:year, :month, :day] %>
 </p>
 <p>
-	<%= f.label :revenue, Project.human_attribute_name("revenue") %>
-	<%= f.text_field :revenue %>
+  <%= f.label :revenue, Project.human_attribute_name("revenue") %>
+  <%= f.text_field :revenue %>
 </p>
 </div>
  <%= f.submit t("common.button.create") %>
