--- a/app/views/required_tags/new.html.erb
+++ b/app/views/required_tags/new.html.erb
@@ -1,21 +1,21 @@
-<% @title = t('.title') %>
+<% title t('.title') %>
 <div id="show_command">
-	...
+  ...
 </div>
 <h2>New</h2>
-<%= form_for @required_tag, 
- 			:html => { :class => 'tabular'} do |f| -%>
+<%= form_for @required_tag,
+       :html => { :class => 'tabular'} do |f| -%>
 <%= hidden_field_tag :returnurl, @returnurl %>
 <%= f.error_messages %>
 <div class="box">
 <p>
-	<%= f.label :modelname, RequiredTag.human_attribute_name('modelname')%>
-	<%= f.text_field :modelname %>
+  <%= f.label :modelname, RequiredTag.human_attribute_name('modelname')%>
+  <%= f.text_field :modelname %>
 </p>
 <%= fields_for :tag, @tag do |tag| -%>
 <p>
-	<%= tag.label :name, t('.tagname') %>
-	<%= tag.text_field :name %>
+  <%= tag.label :name, t('.tagname') %>
+  <%= tag.text_field :name %>
 </p>
 <% end -%>
 </div>
