--- a/app/views/taxbills/_form.html.erb
+++ b/app/views/taxbills/_form.html.erb
@@ -1,5 +1,5 @@
 <% form_type = if taxbill.new_record? then 'new' else 'edit' end %>
-<% @title = t("taxbills.#{form_type}.title") %>
+<% title t("taxbills.#{form_type}.title") %>
 
 <div id="show_command">
   <%= link_to t('common.title.back'), taxbill %>
