--- a/app/views/users/changepw.html.erb
+++ b/app/views/users/changepw.html.erb
@@ -1,13 +1,13 @@
-<% @title = t(".title") %>
+<% title t(".title") %>
 <div id="show_command">
 <% if @user.ingroup? "admin" %>
-	<%= link_to t("common.title.back"), :action => 'index' %>
+  <%= link_to t("common.title.back"), :action => 'index' %>
 <% else %>
-	<%= link_to t("common.title.back"), :controller => "users", :action => 'my' %>
+  <%= link_to t("common.title.back"), :controller => "users", :action => 'my' %>
 <% end %>
 </div>
 <h2><%= t('.subtitle') %></h2>
-<!-- <% if flash[:notice] -%> 
+<!-- <% if flash[:notice] -%>
 <div id="notice"><%= flash[:notice] %></div>
 <% end -%> -->
 
@@ -16,19 +16,19 @@
 <div class="box">
 <% unless @user.ingroup? "admin" %>
 <p>
-	<%= label_tag :oldpassword, t('.oldpassword') %>
+  <%= label_tag :oldpassword, t('.oldpassword') %>
   <%= password_field_tag :oldpassword, params[:oldpassword] %>
 </p>
 <% end %>
 <p>
-	<%= label_tag :password, t('.password') %>
+  <%= label_tag :password, t('.password') %>
   <%= password_field_tag :password, params[:password] %>
 </p>
 <p>
-	<%= label_tag :password_confirmation, t('.password_again') %>
+  <%= label_tag :password_confirmation, t('.password_again') %>
   <%= password_field_tag :password_confirmation, params[:password_confirmation] %>
 </p>
-</div> 
+</div>
 <%= submit_tag t('common.button.change') %>
 <% end %>
 
