--- a/app/views/users/my.html.erb
+++ b/app/views/users/my.html.erb
@@ -1,5 +1,5 @@
-<% @title = t(".title") %>
+<% title t(".title") %>
 <div id="show_command">
-	<%= link_to t("users.changepw.title"), :action => "changepw", :id => @user  %>
+  <%= link_to t("users.changepw.title"), :action => "changepw", :id => @user  %>
 </div>
 <h2><%= t("common.title.show") %></h2>
