--- a/app/views/cardbills/index.html.erb
+++ b/app/views/cardbills/index.html.erb
@@ -1,4 +1,4 @@
-<% @title  = t('.title') %>
+<% title = t('.title') %>
 
 <% content_for :search do -%>
   <%= form_tag :cardbills, :method => :get do %>
