--- a/app/views/vacations/_form.html.slim
+++ b/app/views/vacations/_form.html.slim
@@ -2,7 +2,7 @@
 - title t("vacations.#{form_type}.title")
 
 #show_command
-  = link_to t('common.title.back'), commute_path(user)
+  = link_to t('common.title.back'), vacation_path(user)
 
 h2= t("common.title.#{form_type}")
 
@@ -10,13 +10,13 @@ h2= t("common.title.#{form_type}")
   = f.error_messages
   .box
     p
-      = f.label :from
+      = f.label :from, :default => Time.zone.now
       = f.date_select :from, :order => [:year, :month, :day]
     p
       = f.label :to
-      = f.date_select :to, :order => [:year, :month, :day]
+      = f.date_select :to, :order => [:year, :month, :day], :default => Time.zone.now + 1.year - 1.day
     p
-      = f.label :note
-      = f.text_area :note
+      = f.label :period
+      = f.text_field :period
     p
       = f.submit
