--- a/app/views/vacations/show.html.slim
+++ b/app/views/vacations/show.html.slim
@@ -1,6 +1,7 @@
 #show_command
-  = link_to t('vacations.new.link'), [:new, user, :vacation]
-  = " | "
+  - if @user.ingroup?("admin")
+    = link_to t('vacations.new.link'), [:new, user, :vacation]
+    = " | "
   = link_to t('common.title.list'), :vacations
 
 - unless vacations.empty?
@@ -10,10 +11,11 @@
 
       div align="right"
         = link_to "연차 사용하기", [:new, user, vacation, :used_vacation]
-        = " | "
-        = link_to "수정하기", [:edit, user, vacation]
-        = " | "
-        = link_to "삭제하기", [user, vacation], :method => :delete, :confirm => "Are you sure?"
+        - if @user.ingroup?("admin")
+          = " | "
+          = link_to "수정하기", [:edit, user, vacation]
+          = " | "
+          = link_to "삭제하기", [user, vacation], :method => :delete, :confirm => "Are you sure?"
       - unless vacation.used.empty?
         table
           tr
@@ -21,7 +23,8 @@
             th 연차 종료
             th 기간
             th 사유
-            th 메뉴
+            - if @user.ingroup?("admin")
+              th 메뉴
           - vacation.used.each do |used|
             tr
               td width="120" align="right"
@@ -32,10 +35,11 @@
                 = "#{used.period} 일"
               td width="150" align="right"
                 = used.note
-              td width="150" align="right"
-                = link_to "수정", [:edit, user, vacation, used]
-                = " | "
-                = link_to "삭제", [user, vacation, used], :method => :delete, :confirm => "Are you sure?"
+              - if @user.ingroup?("admin")
+                td width="150" align="right"
+                  = link_to "수정", [:edit, user, vacation, used]
+                  = " | "
+                  = link_to "삭제", [user, vacation, used], :method => :delete, :confirm => "Are you sure?"
         br
       - else
         h4 사용한 연차 내역이 없습니다.
